--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
                     <div class="social-icons">
                       <a class="social-icon" href="mailto:trinhngo.ginger@unist.ac.kr" target="_blank">
                 				<i class="fas fa-envelope"></i></a>
-                			<a class="social-icon" href="https://github.com/nlptrinh" target="_blank">
-                				<i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/nlptrinh" target="_blank">
+                            <i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/nlptrinh" target="_blank">
+                			<i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </section>
